--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "node-fetch": "^3.3.0"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "luxon": "^3.1.0"
   }
 }
